# node-service-devops

./: manifest.yml  package-lock.json  package.json
cloudflare/: grpc.ts  kv_request.ts
logo_data/: grpc.ts  logo_data.ts
nike/: grpc.ts  nike.ts
protos/: CMakeLists.txt  cloudflare.proto  logo.proto  logodata.proto
protos/include/: cloudflare.grpc.pb.cc  cloudflare.grpc.pb.h  cloudflare.pb.cc  cloudflare.pb.h  logo.grpc.pb.cc  logo.grpc.pb.h  logo.pb.cc  logo.pb.h  logodata.grpc.pb.cc  logodata.grpc.pb.h  logodata.pb.cc  logodata.pb.h
server/: config.ts  index.ts
